# agit

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  Makefile  README.md  SECURITY.md  agit-technical-due-diligence.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/agit-core/: Cargo.toml
crates/agit-core/src/: encryption.rs  error.rs  gc.rs  hash.rs  lib.rs  migration.rs  objects.rs  refs.rs  repo.rs  retention.rs  state.rs  types.rs
crates/agit-core/src/storage/: mod.rs  postgres.rs  s3.rs  sqlite.rs
crates/agit-core/tests/: postgres_integration.rs  test_encryption.rs  test_gc.rs  test_s3_concurrency.rs
crates/agit-node/: Cargo.toml  package.json
crates/agit-node/src/: repository.rs  types.rs
crates/agit-python/: Cargo.toml  pyproject.toml
crates/agit-python/src/: convert.rs  lib.rs  repository.rs  types.rs
docker/: .env.example  Dockerfile  Dockerfile.api  docker-compose.test.yml  docker-compose.yml
examples/: a2a_demo.py  claude_demo.py  crewai_demo.py  fides_demo.py  finance_trade.py  google_adk_demo.py  health_agent.py  langgraph_demo.py  legal_review.py  mcp_demo.py  multi_sdk_demo.py  openai_demo.py  openclaw_demo.py  swarm_demo.py  vercel_ai_demo.py
python/agit/: __init__.py  _stubs.py
python/agit/cli/: app.py
python/agit/engine/: __init__.py  executor.py  pii_masker.py  retry.py  validator.py
python/agit/integrations/: a2a.py  claude_sdk.py  crewai.py  fides.py  google_adk.py  langgraph.py  mcp_server.py  openai_agents.py  openclaw.py  vercel_ai.py
python/agit/observability/: otel_traces.py  prometheus.py
python/agit/self_healing/: classifier.py  optimizer.py
python/agit/server/: __init__.py  app.py  auth.py  circuit_breaker.py  middleware.py  models.py  routes.py
python/agit/swarm/: consensus.py  orchestrator.py
python/agit/ui/: audit_dashboard.py  diff_viewer.py  state_replay.py
scripts/: check_contracts.py  run_benchmarks.py
tests/: conftest.py
tests/benchmarks/: bench_retry_success.py  bench_rollback_time.py  bench_rust_vs_python.py  bench_token_usage.py
tests/cli/: test_cli.py
tests/core/: test_state.py
tests/engine/: test_executor.py  test_pii_masker.py  test_retry.py
tests/integration/: test_finance.py  test_health.py  test_legal.py  test_mcp.py  test_mcp_server.py  test_postgres.py  test_server.py  test_swarm.py
ts-sdk/: package-lock.json  package.json  tsconfig.json
ts-sdk/.omc/state/: subagent-tracking.json
ts-sdk/.omc/state/checkpoints/: checkpoint-2026-02-26T13-44-53-945Z.json
ts-sdk/src/: client.ts  index.ts  types.ts
ts-sdk/src/integrations/: a2a.ts  claude-sdk.ts  fides.ts  langgraph.ts  mcp-server.ts  openai-agents.ts  vercel-ai.ts
ts-sdk/tests/: client.test.ts
vscode-extension/: package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/providers/: BranchProvider.ts  CommitHistoryProvider.ts
web/: next.config.js  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx
web/src/app/(dashboard)/: layout.tsx  page.tsx
web/src/app/(dashboard)/audit/: page.tsx
web/src/app/(dashboard)/branches/: page.tsx
web/src/app/(dashboard)/commits/: page.tsx
web/src/app/landing/: page.tsx
web/src/components/: sidebar.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx
web/src/lib/: api.ts  utils.ts
