[workspace]
members = ["crates/agit-core", "crates/agit-python", "crates/agit-node"]
resolver = "2"

[workspace.dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1", features = ["alloc"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = "0.7"
tokio = { version = "1", features = ["full"] }
petgraph = "0.7"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
