[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agit"
version = "0.1.0"
description = "Git-like version control for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "AgentGit Contributors"},
]
keywords = ["ai", "agents", "version-control", "git", "llm", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.0,<14.0",
    "cryptography>=41.0,<44.0",
]

[project.urls]
Homepage = "https://github.com/anthropics/agit"
Documentation = "https://github.com/anthropics/agit/tree/main/docs"
Repository = "https://github.com/anthropics/agit"
Issues = "https://github.com/anthropics/agit/issues"
Changelog = "https://github.com/anthropics/agit/releases"

[project.optional-dependencies]
google-adk = ["google-adk>=1.25,<2.0"]
openai = ["openai-agents>=0.6,<1.0"]
claude = ["claude-agent-sdk>=0.1.41,<1.0"]
vercel = ["ai>=6.0,<7.0"]
langgraph = ["langgraph>=1.0,<2.0"]
crewai = ["crewai>=1.9,<2.0"]
mcp = ["mcp>=2.1,<3.0", "fastmcp>=2.1,<3.0"]
ui = ["streamlit>=1.30,<2.0", "plotly>=5.18,<6.0"]
observability = ["prometheus-client>=0.20,<1.0", "opentelemetry-api>=1.20,<2.0"]
postgres = ["asyncpg>=0.29,<1.0"]
s3 = ["boto3>=1.34,<2.0"]
native = ["agit-core>=0.1.0,<1.0"]
server = ["fastapi>=0.100,<1.0", "uvicorn>=0.25,<1.0", "slowapi>=0.1,<1.0", "pydantic>=2.0,<3.0"]
dev = ["pytest>=8.0,<9.0", "pytest-cov>=4.0,<6.0", "pytest-asyncio>=0.23,<1.0", "mypy>=1.8,<2.0", "ruff>=0.2,<1.0", "maturin>=1.0,<2.0"]
all = ["agit[google-adk,openai,claude,vercel,langgraph,crewai,mcp,ui,observability,postgres,s3,server,dev]"]

[project.scripts]
agit = "agit.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["python/agit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
