[package]
name = "agit-core"
version = "0.1.0"
edition = "2021"
description = "Git-like VCS engine for AI agents"
license = "MIT"

[features]
default = ["encryption"]
postgres = ["dep:tokio-postgres"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:zstd"]
encryption = ["dep:aes-gcm", "dep:argon2"]

[dependencies]
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
rusqlite = { workspace = true }
tokio-rusqlite = { workspace = true }
tokio = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"

# Optional: postgres backend
tokio-postgres = { version = "0.7", optional = true }

# Optional: S3 backend
aws-sdk-s3 = { version = "1", optional = true }
aws-config  = { version = "1", optional = true }
zstd        = { version = "0.13", optional = true }

# Optional: encryption
aes-gcm = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
