[build-system]
requires = ["maturin>=1.12"]
build-backend = "maturin"

[project]
name = "agit-core"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
