[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "agit-core"
version = "0.1.0"
description = "Native Rust acceleration for agit (Git-like version control for AI agents)"
readme = "../../README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "AgentGit Contributors"},
]
keywords = ["ai", "agents", "version-control", "git", "rust", "native"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Version Control",
]

[project.urls]
Homepage = "https://github.com/anthropics/agit"
Repository = "https://github.com/anthropics/agit"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "agit_core"
